--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -14,9 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/text_margin"
-        android:layout_marginLeft="@dimen/text_margin"
+        android:layout_marginStart="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem"
-
         android:text=""
         android:fontFamily="@font/robotoslab_bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -35,5 +34,25 @@
         android:fontFamily="@font/robotoslab_regular"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/item_title"
+        />
+
+    <Button
+        android:id="@+id/item_del_button"
+        style="@style/save_button"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_margin="0dp"
+
+        android:tint="@color/og_black"
+        android:drawableTint="@color/og_black"
+        android:textColor="@color/og_black"
+        android:background="@drawable/delete_outline_24"
+        android:backgroundTint="@color/og_black"
+        android:backgroundTintMode="multiply"
+        android:foregroundTint="@color/og_black"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
