--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -5,16 +5,257 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditActivity">
+    tools:context=".EditActivity"
+    android:background="@color/og_grey">
 
-<!--    <TextView-->
-<!--        android:id="@+id/test"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:textSize="20px"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"/>-->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/header"
+        style="@style/header"
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/left_guideline">
+        <TextView
+            android:id="@+id/header_tv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Edit"
+            style="@style/header"/>
+    </androidx.appcompat.widget.Toolbar>
+
+    <EditText
+        android:id="@+id/settings_color_option"
+        style="@style/inputs"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="10dp"
+        android:autofillHints=""
+        android:inputType="text"
+        android:text=""
+        app:layout_constraintLeft_toRightOf="@id/left_guideline"
+        app:layout_constraintRight_toLeftOf="@id/right_guideline"
+        app:layout_constraintTop_toBottomOf="@id/top_guideline" />
+
+    <TextView
+        android:id="@+id/pick_color"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/pick_a_color_for_it"
+        android:layout_marginTop="40dp"
+        android:textColor="@color/og_cream"
+        android:fontFamily="@font/robotoslab_regular"
+
+        app:layout_constraintTop_toBottomOf="@id/settings_color_option"
+        app:layout_constraintLeft_toRightOf="@id/left_text_guideline" />
+
+
+
+
+    <!--    =================================================== USER PICKS A COLOR-->
+    <RadioGroup
+        android:id="@+id/color_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp"
+
+        app:layout_constraintTop_toBottomOf="@id/pick_color"
+        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
+        app:layout_constraintRight_toLeftOf="@id/right_guideline">
+        <androidx.appcompat.widget.AppCompatRadioButton
+            android:id="@+id/og_cream"
+            android:backgroundTint="@color/og_cream"
+            style="@style/checkbox_color"
+            android:layout_width="80sp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="15sp"/>
+        <androidx.appcompat.widget.AppCompatRadioButton
+            android:id="@+id/og_green"
+            android:layout_width="80sp"
+            android:layout_height="match_parent"
+            style="@style/checkbox_color"
+            android:backgroundTint="@color/og_green"
+            tools:ignore="MissingConstraints"
+            android:layout_marginRight="15sp"/>
+        <androidx.appcompat.widget.AppCompatRadioButton
+            android:id="@+id/og_white"
+            style="@style/checkbox_color"
+            android:layout_width="80sp"
+            android:layout_height="match_parent"
+            android:backgroundTint="@color/og_white"
+            tools:ignore="MissingConstraints"
+            android:layout_marginRight="15sp"/>
+        <androidx.appcompat.widget.AppCompatRadioButton
+            android:id="@+id/og_orange"
+            style="@style/checkbox_color"
+            android:layout_width="80sp"
+            android:layout_height="match_parent"
+            android:backgroundTint="@color/og_orange"
+            tools:ignore="MissingConstraints"
+            />
+
+    </RadioGroup>
+
+    <!--    =================================================== USER PICKS A FORMAT-->
+    <TextView
+        android:id="@+id/which"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/choose_a_format_for_the_countdown"
+        android:layout_marginTop="40dp"
+        android:textColor="@color/og_cream"
+        android:fontFamily="@font/robotoslab_regular"
+        app:layout_constraintTop_toBottomOf="@id/date_button"
+        app:layout_constraintLeft_toLeftOf="@id/left_text_guideline"/>
+
+    <com.google.android.flexbox.FlexboxLayout
+        android:id="@+id/pick_format"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+
+        app:layout_constraintTop_toBottomOf="@+id/which"
+        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
+        app:layout_constraintRight_toRightOf="@id/right_guideline"
+
+        app:flexWrap="wrap"
+        app:alignItems="stretch"
+        app:alignContent="space_around"
+        app:justifyContent="space_between">
+
+        <androidx.appcompat.widget.AppCompatCheckBox
+            android:id="@+id/format_week"
+            style="@style/checkbox"
+            android:layout_width="60dp"
+            android:layout_height="40sp"
+            android:text="@string/week" />
+        <androidx.appcompat.widget.AppCompatCheckBox
+            android:id="@+id/format_day"
+            style="@style/checkbox"
+            android:layout_width="60dp"
+            android:layout_height="40sp"
+            android:text="@string/day" />
+        <androidx.appcompat.widget.AppCompatCheckBox
+            android:id="@+id/format_hour"
+            style="@style/checkbox"
+            android:layout_width="60dp"
+            android:layout_height="40sp"
+            android:text="@string/hour"/>
+        <androidx.appcompat.widget.AppCompatCheckBox
+            android:id="@+id/format_min"
+            style="@style/checkbox"
+            android:layout_width="60dp"
+            android:layout_height="40sp"
+            android:text="@string/min" />
+        <androidx.appcompat.widget.AppCompatCheckBox
+            android:id="@+id/format_sec"
+            style="@style/checkbox"
+            android:layout_width="60dp"
+            android:layout_height="48sp"
+            android:text="@string/sec" />
+    </com.google.android.flexbox.FlexboxLayout>
+
+
+
+    <!--    =================================================== USER PICKS A DATE-->
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/date_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/date_time"
+        android:layout_marginTop="50sp"
+        android:padding="10sp"
+
+        android:text="@string/date"
+        app:layout_constraintTop_toBottomOf="@id/color_layout"
+        app:layout_constraintRight_toLeftOf="@id/time_button"
+        app:layout_constraintLeft_toRightOf="@id/left_guideline"
+
+        />
+    <!--    =================================================== USER PICKS A TIME-->
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/time_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/date_time"
+        android:layout_marginTop="50sp"
+        android:padding="10sp"
+
+        android:text="@string/time"
+        app:layout_constraintTop_toBottomOf="@id/color_layout"
+        app:layout_constraintRight_toLeftOf="@id/right_guideline"
+        app:layout_constraintLeft_toRightOf="@id/date_button"
+
+        />
+
+    <!--    =================================================== USER ADDS AN OPTIONAL DESCRIPTION-->
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/task_description"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="60sp"
+        android:textColorHint="@color/og_white"
+        android:hint="@string/description_optional"
+        android:fontFamily="@font/robotoslab_light"
+
+        app:layout_constraintTop_toBottomOf="@id/pick_format"
+        app:layout_constraintRight_toLeftOf="@id/right_guideline"
+        app:layout_constraintLeft_toRightOf="@id/left_guideline"
+        />
+
+    <!--    =================================================== USER SAVES TASK-->
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/save_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        style="@style/save_button"
+        android:textAllCaps="false"
+        android:text="@string/save_this_task"
+
+
+        app:layout_constraintLeft_toRightOf="@id/left_guideline"
+        app:layout_constraintRight_toLeftOf="@id/right_guideline"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
+        />
+
+    <!--    =================================================== GUIDELINES-->
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/top_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.12"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/bottom_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.95"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/left_text_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.07"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/left_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/right_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.95"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
