--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -6,23 +6,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EditActivity"
-    android:background="@color/og_grey">
+    android:background="@color/og_taupe">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/header"
         style="@style/header"
         android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="@id/right_guideline"
         app:layout_constraintLeft_toRightOf="@id/left_guideline">
-        <TextView
-            android:id="@+id/header_tv"
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Edit"
-            style="@style/header"/>
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/header_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Edit"
+                style="@style/header"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <ImageButton
+                android:id="@+id/delete_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:scaleType="fitXY"
+                android:background="@null"
+                android:src="@drawable/delete_outline_24"
+                android:contentDescription="Delete"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.appcompat.widget.Toolbar>
+
 
     <EditText
         android:id="@+id/settings_color_option"
@@ -48,7 +73,6 @@
 
         app:layout_constraintTop_toBottomOf="@id/settings_color_option"
         app:layout_constraintLeft_toRightOf="@id/left_text_guideline" />
-
 
 
 
@@ -167,7 +191,6 @@
         style="@style/date_time"
         android:layout_marginTop="50sp"
         android:padding="10sp"
-
         android:text="@string/date"
         app:layout_constraintTop_toBottomOf="@id/color_layout"
         app:layout_constraintRight_toLeftOf="@id/time_button"
