--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:text="@string/pick_a_color_for_it"
         android:layout_marginTop="40dp"
-        android:textColor="@color/og_cream"
+        android:textColor="@color/og_grey"
         android:fontFamily="@font/robotoslab_regular"
 
         app:layout_constraintTop_toBottomOf="@id/settings_color_option"
@@ -104,7 +104,7 @@
         android:layout_height="wrap_content"
         android:text="@string/choose_a_format_for_the_countdown"
         android:layout_marginTop="40dp"
-        android:textColor="@color/og_cream"
+        android:textColor="@color/og_grey"
         android:fontFamily="@font/robotoslab_regular"
         app:layout_constraintTop_toBottomOf="@id/date_button"
         app:layout_constraintLeft_toLeftOf="@id/left_text_guideline"/>
