--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -89,7 +89,7 @@
 
     <style name="date_time">
         <item name="android:background">@drawable/date_time_buttons</item>
-        <item name="android:textColor">@color/og_white</item>
+        <item name="android:textColor">@color/og_grey</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">@font/robotoslab_regular</item>
     </style>
